--- a/style.css
+++ b/style.css
@@ -108,8 +108,15 @@ img {
   font-weight: 300;
   font-size: 25px;
 }
+.btn-index:hover {
+  border: 2px solid white;
+  cursor: pointer;
+}
 .color-btn-index {
   color: white;
+  margin: 2rem;
+  letter-spacing: 1rem;
+  font-size: 2rem;
 }
 @media (max-width: 600px) {
   .titulo {
