--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ li a.iniciarsecion:hover {
 }
 .campo__field {
   flex: 1;
-  border: 1px solid var(--gris);
+  border: 1px solid black;
 }
 .campo__field--textarea {
   height: 20rem;
@@ -707,6 +707,7 @@ li a.iniciarsecion:hover {
   border: none;
 }
 .boton-contacto:hover {
+  background-color:linear-gradient(to right, rgba(45, 0, 248, 0.479) 0%, rgba(47, 51, 56, 0.479) 100%);
   cursor: pointer;
 }
 .mapa {
@@ -722,7 +723,7 @@ li a.iniciarsecion:hover {
     height: 50rem;
   }
   .formulario {
-    margin: -50rem auto 0 auto;
+    margin: -50rem 0 0 0;
    width: 100%;
   }
   .mapa {
@@ -733,8 +734,196 @@ li a.iniciarsecion:hover {
     margin-left: 6rem;
     
   }
+  .boton-contacto {
+    margin-left: 5.2rem;
+  }
 }
 
+/** FIN CONTACTO **/
+
+/** INICIO SESION **/
+.titulo-sesion {
+ color: white;
+}
+.contenedor-iniciosesion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.contenedor--iniciosesion {
+ background-image: url(img/bg-contacto.jpg);
+ box-shadow: -2px 15px 103px 36px rgba(0,0,0,0.75);
+-webkit-box-shadow: -2px 15px 103px 36px rgba(0,0,0,0.75);
+-moz-box-shadow: -2px 15px 103px 36px rgba(0,0,0,0.75);
+  width: 50rem;
+  height: 50rem;
+  margin-top: 10rem;
+  border: 2px solid black;
+  border-radius: 2rem;
+}
+
+.contenedor-input-iniciosesion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.input-sesion {
+  margin-bottom: 2rem;
+}
+.label-sesion {
+  flex: 0 0 9rem;
+  font-size: 2rem;
+  text-align: right;
+  padding-right: 2rem;
+  color:white;
+}
+.input-sesion {
+  flex: 1; 
+  font-size: 2rem;
+}
+.btn-sesion {
+  color: white;
+  font-size: 3rem;
+  width: 25rem;
+}
+
+.btn-sesion:hover {
+  color: #00adb5;
+}
+.btn-registrarse {
+  color: white;
+  font-size: 2.5rem;
+  width: 25rem;
+}
+.btn-registrarse:hover {
+  color: red;
+}
+.flechatop-sesion {
+  margin-top: 10rem;
+} 
+@media screen and (max-width:500px) {
+  .flechatop-sesion {
+    display: none;
+  }
+  .contenedor--iniciosesion {
+    height: 30rem;
+    margin-top: 5rem;
+  }
+  .label-sesion {
+    flex: 0 0 9rem;
+    font-size: 1.5rem;
+    text-align: right;
+    padding-right: 2rem;
+    color:white;
+  }
+  .input-sesion {
+    flex: 1; 
+    font-size: 1.5rem;
+  }
+  .btn-sesion {
+    color: white;
+    font-size: 1.5rem;
+    width: 25rem;
+    margin-top: -2.5rem;
+  }
+  .btn--registrarse {
+    color: white;
+    font-size: 1.5rem;
+    width: 25rem;
+    margin-top: -0.5rem;
+  }
+}
+/** FIN INICIO SESION **/
+
+/** REGISTRARSE **/
+.contenedor--registrarse{
+  background-image: url(img/bg-contacto.jpg);
+  box-shadow: -2px 15px 103px 36px rgba(0,0,0,0.75);
+ -webkit-box-shadow: -2px 15px 103px 36px rgba(0,0,0,0.75);
+ -moz-box-shadow: -2px 15px 103px 36px rgba(0,0,0,0.75);
+   width: 50rem;
+   height: 50rem;
+   margin-top: 10rem;
+   border: 2px solid black;
+   border-radius: 2rem;
+ }
+.btn--registrarse {
+  color: white;
+  font-size: 2.5rem;
+  width: 25rem;
+  margin-top: -1rem;
+}
+.btn--registrarse:hover {
+  color: #00adb5;
+}
+@media screen and (max-width:500px) {
+  .contenedor--registrarse {
+    margin-top: 5rem;
+    height: 45rem;
+  }
+  .btn--registrarse {
+    margin-top: 0;
+  }
+}
+/** FIN REGISTROS **/
+/** NOSOTROS **/ 
+.contenedor-titulo-nosotros {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contenedor-titulo__ {
+  width: 40%;
+}
+.titulo-nosotros {
+  font-size: 5rem;
+}
+.titulo-blanco {
+  color: white;
+}
+.parrafo-nosotros {
+  font-size: 3rem;
+}
+.parrafo-nosotros:hover {
+  color: white;
+}
+.parrafo-nosotros:hover::after {
+  content: "\\";
+  color: white;
+}
+.parrafo-nosotros:hover::before {
+  content: "/";
+  color: white;
+}
+@media screen and (max-width:500px) {
+  .contenedor-titulo-nosotros {
+    width: 99%;
+  }
+  .contenedor-titulo__ {
+    width: 100%;
+  }
+  .titulo-nosotros {
+    font-size: 2.5rem;
+    padding: 0 2rem;
+  }
+  .parrafo-nosotros {
+    font-size: 2rem;
+  }
+}
+.contenedor-separador {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+}
+.img-nosotros {
+  width: 30rem;
+  gap: 2rem;
+}
 /** FOOTER **/
 
 .footer {
